Correct social icon spacing

--- a/src/components/gwic-footer/_gwic-footer.scss
+++ b/src/components/gwic-footer/_gwic-footer.scss
@@ -96,7 +96,11 @@
   a {
     text-decoration: none;
 
-    @include nsw-spacing(margin-right, lg);
+    @include nsw-spacing(margin-left, lg);
+
+    &:first-child {
+      @include nsw-spacing(margin-left, none);
+    }
   }
 
   svg {
